--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@types/node": "^24.0.4",
     "@types/pg": "^8.15.4",
     "@types/socket.io": "^3.0.1",
+    "drizzle-kit": "^0.31.4",
     "nodemon": "^3.1.10",
+    "tsx": "^4.20.3",
     "typescript": "^5.8.3"
   }
 }
