fixed file path

--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "type": "module",
+  "main": "./src/server.ts",
   "scripts": {
+    "dev": "nodemon --watch src --ext ts --exec ts-node ./src/server.ts",
+    "build": "tsc",
+    "start": "node ./src/server.ts",
+    "migrate": "drizzle-kit push:pg",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -24,6 +29,7 @@
     "@types/socket.io": "^3.0.1",
     "drizzle-kit": "^0.31.4",
     "nodemon": "^3.1.10",
+    "ts-node": "^10.9.2",
     "tsx": "^4.20.3",
     "typescript": "^5.8.3"
   }
